TestSuite/errors/err0294.pas
type
  T1 =  array [integer] of byte;

begin
  
end.